Fix Slider vertical alignment in IE11

--- a/src/scss/components/_slider.scss
+++ b/src/scss/components/_slider.scss
@@ -59,13 +59,17 @@ $slider-mark-size: 0.75rem !default;
         background: $slider-track-background;
         border-radius: $slider-track-radius;
         border: $slider-track-border;
+        // Fix alignment in IE 11. Cancel out for others
+        top: 50%;
+        transform: translateY(-50%);
     }
     .b-slider-thumb-wrapper {
         display: inline-flex;
         align-items: center;
         position: absolute;
-        transform: translateX(-50%);
+        transform: translate(-50%, -50%);
         cursor: grab;
+        top: 50%;
 
         .b-slider-thumb {
             box-shadow: $slider-thumb-shadow;
@@ -128,9 +132,10 @@ $slider-mark-size: 0.75rem !default;
         display: flex;
         justify-content: center;
 		width: $slider-tick-width;
-        transform: translateX(-50%);
+        transform: translate(-50%, -50%);
         background: $slider-tick-background;
         border-radius: $slider-tick-radius;
+        top: 50%;
         &.is-tick-hidden {
             background: transparent;
         }
